# dh-amulets

./: .env  .gitignore  .prettierignore  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  docker-compose.yml  package-lock.json  package.json  release-please-config.json  tailwind.config.js
.cargo/: config.toml
.github/workflows/: _audit.yml  _lint.yml  _release_please.yml  audit.yml  development_pr.yml  general.yml  main.yml  main_pr.yml  main_scheduled.yml  publish.yml  sync_development_with_main.yml
configuration/: base.toml  base.yaml  github.toml  github.yaml  local.toml  production.toml
docs/: Pawn.odg
end2end/tests/: amulet-count.spec.ts  amulet-images.spec.ts  example.spec.ts  menu.spec.ts  navigation.spec.ts  not-found.spec.ts  service-worker-control.spec.ts  service-worker-registration.spec.ts  setup-id-in-menu.spec.ts  setup-id-input.spec.ts  setup-pages.spec.ts  setup-redirect.spec.ts  setup-reroll.spec.ts  theme-selector.spec.ts  title_and_header.spec.ts
public/: manifest.json  sw.js  sw.template.js
scripts/: e2e-docker.sh  e2e-testing.sh
src/: amulets.rs  app.rs  configuration.rs  context.rs  home.rs  lib.rs  main.rs  menu.rs  setup.rs  startup.rs  themes.rs
src.old/routes/: setup.rs
src/routes/: home.rs  mod.rs
static/: index.html
static/styles/: styles.css
style/: input.css
templates/: base.html  home.html  remove_amulets.html  setup.html
