[package]
name = "dh-amulets"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.3.0"
axum = "0.6.20"
rand = "0.8.5"
shuttle-axum = "0.34.0"
shuttle-runtime = "0.34.0"
tokio = "1.28.2"
tower-http = { version = "0.4.4", features = ["fs"] }
tracing = "0.1.40"
