[package]
name = "dh-amulets"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = "0.7.4"
rand = "0.8.5"
shuttle-axum = "0.39.0"
shuttle-runtime = "0.39.0"
tokio = "1.36.0"
tower-http = { version = "0.5.1", features = ["fs"] }
tracing = "0.1.40"
