[package]
name = "dh-amulets"
version = "0.6.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
actix-web = "4"
actix-files = "0.6"
askama = { version = "0.12.1", features = ["with-actix-web"] }
askama_actix = "0.14.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tracing-actix-web = "0.7"
config = { version = "0.14", default-features = false, features = ["toml"] }
serde = { version = "1.0.203", features = ["derive"] }
serde-aux = "4"
anyhow = "1"
rand = "0.8.5"
